--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ monkeylearn==3.6.0
 mysqlclient==2.2.4
 namex==0.0.8
 nltk==3.8.1
-numpy==1.21.6  # Compatible with TensorFlow 2.11.0
+numpy==1.21.4
 oauth2_provider==0.0
 opt-einsum==3.3.0
 optree==0.11.0
